--- a/tasks.json
+++ b/tasks.json
@@ -1,101 +1,181 @@
 [
-    "Attend a Bobcats sports game to support the team.",
-    "Explore the beautiful Sewell Park along the San Marcos River.",
-    "Join a student organization that aligns with your interests.",
-    "Visit the Alkek Library and find a cozy study spot.",
-    "Attend a live music event at The Marc in San Marcos.",
-    "Take a scenic hike at Purgatory Creek Natural Area.",
-    "Try the famous 'Don's Fish Camp' tubing experience.",
-    "Participate in a cultural event or festival on campus.",
-    "Volunteer for a local community service project.",
-    "Explore the Aquarena Springs and Glass-Bottom Boat Tours.",
-    "Join the university's outdoor adventure club for trips.",
-    "Enjoy a meal at a local Tex-Mex restaurant in San Marcos.",
-    "Attend a lecture or seminar related to your major.",
-    "Take a walk through the beautiful campus gardens.",
-    "Experience the annual Mermaid Festival in San Marcos.",
-    "Visit the Wittliff Collections to explore Texan history.",
-    "Try paddleboarding or kayaking on the San Marcos River.",
-    "Attend a gallery exhibition at the Texas State Galleries.",
-    "Join a local food festival or fair in the area.",
-    "Volunteer at the San Marcos Animal Shelter.",
-    "Explore the Texas State Arboretum and Hill Country trails.",
-    "Attend a comedy show at the Vodka Street Comedy Club.",
-    "Experience the San Marcos Farmer's Market.",
-    "Try out the various food trucks in San Marcos.",
-    "Participate in the annual River Fest in San Marcos.",
-    "Join a student fitness class or yoga session.",
-    "Visit the Meadows Center for Water and the Environment.",
-    "Attend a Bobcat Radio concert or event.",
-    "Explore the San Marcos Downtown Square.",
-    "Join a hiking group to explore the Texas Hill Country.",
-    "Attend a local art and craft fair in San Marcos.",
-    "Volunteer for a river cleanup initiative.",
-    "Join a Texas State intramural sports league.",
-    "Attend a guest speaker event on campus.",
-    "Explore the historic Wonder World Park.",
-    "Join the Dance Marathon for a charitable cause.",
-    "Enjoy a movie night at the Texas Cinema in San Marcos.",
-    "Attend a cultural exchange event with international students.",
-    "Join a local environmental conservation project.",
-    "Experience the Texas State Homecoming Parade.",
-    "Volunteer at a local community garden.",
-    "Take part in the annual Mochas & Javas 5K race.",
-    "Attend a live theater performance at Texas State.",
-    "Join a Texas State music ensemble or choir.",
-    "Explore the San Marcos Greenbelt trails.",
-    "Join a campus sustainability or eco-friendly group.",
-    "Attend the annual Texas State Powwow.",
-    "Volunteer for a local animal rescue organization.",
-    "Try out geocaching around the San Marcos area.",
-    "Attend a creative writing workshop or club.",
-    "Join a student-run publication or newspaper.",
-    "Explore the historic LBJ Museum in San Marcos.",
-    "Volunteer at a local children's hospital.",
-    "Try your hand at disc golf at Purgatory Creek Park.",
-    "Join a Texas State computer programming club.",
-    "Attend a local astronomy club stargazing event.",
-    "Explore the scenic Jacob's Well Natural Area.",
-    "Join a campus film club or society.",
-    "Participate in a community theater production.",
-    "Join a local bird-watching group.",
-    "Attend a campus health and wellness fair.",
-    "Explore the San Marcos Nature Center.",
-    "Join a photography club or organization.",
-    "Attend a local brewery tour in San Marcos.",
-    "Volunteer for a local literacy program.",
-    "Try your skills at the San Marcos Skate Park.",
-    "Attend a campus multicultural festival.",
-    "Explore the scenic Blanco River.",
-    "Join a campus improv or theater group.",
-    "Volunteer for a local food bank.",
-    "Try out rock climbing at the San Marcos Activity Center.",
-    "Attend a local wildlife conservation event.",
-    "Explore the Meadows Center Glass-Bottom Boat Tours.",
-    "Join a campus psychology or sociology club.",
-    "Volunteer at a local music or arts festival.",
-    "Try your hand at stand-up paddleboarding.",
-    "Join a Texas State history club.",
-    "Attend a local science and technology fair.",
-    "Explore the A.B. Rogers Sculpture Park.",
-    "Join a campus political club or organization.",
-    "Volunteer for a local music education program.",
-    "Attend a campus architecture and design event.",
-    "Explore the San Marcos Riverwalk.",
-    "Join a Texas State economics or business club.",
-    "Volunteer at a local environmental cleanup.",
-    "Try out wakeboarding or waterskiing.",
-    "Join a campus chemistry or physics club.",
-    "Attend a local food and wine festival.",
-    "Explore the scenic Blue Hole Regional Park.",
-    "Join a Texas State engineering or robotics club.",
-    "Attend a local art gallery opening in San Marcos.",
-    "Join a Texas State astronomy or astrophysics club.",
-    "Volunteer for a river cleanup initiative in San Marcos.",
-    "Explore the scenic Spring Lake Natural Area.",
-    "Join a campus language or cultural exchange group.",
-    "Attend a local gardening or horticulture event.",
-    "Try your hand at watercolor painting or art."
+    "Write a poem about your favorite season.",
+    "Learn a new word and use it in a sentence.",
+    "Draw a doodle representing your mood right now.",
+    "Take a photo of something blue.",
+    "Try a new recipe and share the results.",
+    "Send a handwritten letter to a friend.",
+    "Write down three things you're grateful for.",
+    "Create a bucket list of places you want to visit.",
+    "Practice a magic trick and amaze someone.",
+    "Do 10 minutes of stretching exercises.",
+    "Research a historical event you know little about.",
+    "Watch a TED Talk on a topic you're curious about.",
+    "Organize your closet and donate unused clothes.",
+    "Compliment a stranger and brighten their day.",
+    "Plant a flower or herb in a small pot.",
+    "Write a short story with a surprise ending.",
+    "Learn a few phrases in a new language.",
+    "Take a nature walk and collect interesting leaves.",
+    "Try a 15-minute meditation session.",
+    "Create a collage from old magazines.",
+    "Make a list of your favorite childhood games.",
+    "Learn a new card game and teach it to someone.",
+    "Write a letter to your future self.",
+    "Research a famous inventor and their contributions.",
+    "Take a 30-minute break from screens.",
+    "Create a DIY bird feeder and hang it outside.",
+    "Identify three constellations in the night sky.",
+    "Try a 7-minute workout routine.",
+    "Write a fictional character's diary entry.",
+    "Take a bike ride to a new location.",
+    "Visit a local museum or art gallery.",
+    "Write a thank-you note to someone you appreciate.",
+    "Practice mindfulness for 10 minutes.",
+    "Make a list of your top 10 favorite movies.",
+    "Bake cookies and share them with neighbors.",
+    "Research a culture you know little about.",
+    "Design a dream house on paper.",
+    "Take a different route on your daily walk.",
+    "Watch a documentary on a topic you know nothing about.",
+    "Write a joke and share it with someone.",
+    "Create a vision board for your future goals.",
+    "Memorize five famous quotes.",
+    "Try a virtual escape room.",
+    "Play a board game with friends or family.",
+    "Write a short play and perform it for someone.",
+    "Take a photo of a sunrise or sunset.",
+    "Learn to play a simple song on a musical instrument.",
+    "Make a list of books you want to read.",
+    "Research a conspiracy theory for fun.",
+    "Write a letter to your favorite author.",
+    "Create a time capsule with items from today.",
+    "Write a review for a recent movie or TV show.",
+    "Build a small structure using toothpicks and marshmallows.",
+    "Volunteer for a local charity or organization.",
+    "Create a list of personal affirmations.",
+    "Draw a self-portrait.",
+    "Write a short love letter to yourself.",
+    "Try a new hairstyle.",
+    "Learn a fun dance routine online.",
+    "Visit a local farmers' market.",
+    "Write a letter to an old friend you've lost touch with.",
+    "Take a photo of something that makes you smile.",
+    "Learn the basics of coding.",
+    "Write a list of goals for the month.",
+    "Try a new type of tea or coffee.",
+    "Learn to fold origami.",
+    "Write a one-page autobiography.",
+    "Take a different route on your daily commute.",
+    "Write a letter to your favorite fictional character.",
+    "Take a scenic drive and enjoy the view.",
+    "Create a family tree.",
+    "Try a new hairstyle or hair color.",
+    "Paint a rock and leave it in a public place.",
+    "Watch a tutorial and learn a new skill.",
+    "Write a letter to your future self in 10 years.",
+    "Try a new sport or physical activity.",
+    "Write a short story set in the future.",
+    "Try a new ice cream flavor.",
+    "Create a playlist of songs that make you happy.",
+    "Write a short story about an adventure.",
+    "Take a photo of a unique cloud formation.",
+    "Learn a few basic yoga poses.",
+    "Try a new flavor of popcorn.",
+    "Create a list of your favorite childhood toys.",
+    "Write a letter to someone who has inspired you.",
+    "Take a photo of something that represents peace.",
+    "Try a 7-day photography challenge.",
+    "Write a letter to your future self in 5 years.",
+    "Learn to solve a Rubik's Cube.",
+    "Try a new type of puzzle or brainteaser.",
+    "Write a short sci-fi story.",
+    "Take a photo of a beautiful flower.",
+    "Try a 20-minute home workout.",
+    "Create a list of your favorite podcasts.",
+    "Write a letter to your favorite artist.",
+    "Take a virtual tour of a national park.",
+    "Try a new type of dessert.",
+    "Write a thank-you note to a mentor.",
+    "Learn to make a paper airplane that can fly far.",
+    "Try a 7-day journaling challenge.",
+    "Create a list of your favorite childhood snacks.",
+    "Write a letter to a future generation.",
+    "Take a photo of a unique piece of street art.",
+    "Try a new type of sandwich or wrap.",
+    "Write a short mystery story.",
+    "Learn to draw a simple cartoon character.",
+    "Take a day trip to a nearby town.",
+    "Write a letter to your favorite actor.",
+    "Try a 10-minute mindfulness meditation.",
+    "Create a list of your favorite quotes from books.",
+    "Take a photo of a beautiful sunset.",
+    "Try a new type of smoothie.",
+    "Write a letter to your future self in 15 years.",
+    "Learn a few basic magic tricks.",
+    "Visit a local market and try a new food.",
+    "Write a short comedy script.",
+    "Take a photo of something that represents creativity.",
+    "Try a 7-day gratitude challenge.",
+    "Create a list of your favorite board games.",
+    "Write a letter to your future spouse.",
+    "Learn to fold a paper crane.",
+    "Try a new type of art medium (e.g., pastels, charcoal).",
+    "Take a virtual tour of a historical landmark.",
+    "Write a short fantasy story.",
+    "Try a new type of dance, like salsa or tango.",
+    "Create a list of your favorite childhood cartoons.",
+    "Write a letter to your future self in 25 years.",
+    "Try a 30-day photography challenge.",
+    "Learn to play a new card game.",
+    "Take a photo of something that represents adventure.",
+    "Try a new type of noodle dish.",
+    "Write a letter to your favorite poet.",
+    "Learn to do a simple magic trick with coins.",
+    "Visit a nearby zoo or animal sanctuary.",
+    "Create a list of your favorite childhood candies.",
+    "Write a letter to your future self in 50 years.",
+    "Try a new type of indoor plant.",
+    "Take a photo of a unique building or architecture.",
+    "Try a 5-minute deep breathing exercise.",
+    "Write a short historical fiction story.",
+    "Learn to make a homemade face mask.",
+    "Take a day trip to a nature reserve.",
+    "Write a letter to your favorite movie director.",
+    "Try a 10-minute bodyweight workout.",
+    "Create a list of your favorite childhood TV shows.",
+    "Take a photo of something that represents serenity.",
+    "Try a new type of salad or salad dressing.",
+    "Write a letter to your future self in 40 years.",
+    "Learn to do a simple magic trick with cards.",
+    "Visit a science museum.",
+    "Create a list of your favorite childhood video games.",
+    "Write a short science fiction story.",
+    "Try a new type of fruit or vegetable.",
+    "Take a photo of a unique piece of street art.",
+    "Try a 7-day mindfulness meditation challenge.",
+    "Write a letter to your future self in 60 years.",
+    "Learn to play a new board game.",
+    "Take a photo of something that represents tranquility.",
+    "Try a new type of pasta dish.",
+    "Write a letter to your favorite fictional character.",
+    "Learn to do a simple magic trick with everyday objects.",
+    "Visit a botanical garden.",
+    "Create a list of your favorite childhood books.",
+    "Write a short adventure story.",
+    "Try a new type of workout or exercise class.",
+    "Take a photo of a beautiful sunrise or sunset.",
+    "Try a new type of dance class.",
+    "Create a list of your top 10 favorite movies.",
+    "Learn to play a new musical instrument.",
+    "Write a letter to your future self in 30 years.",
+    "Try a new hairstyle or haircut.",
+    "Take a photo of a unique cloud formation.",
+    "Try a 30-day fitness challenge.",
+    "Write a letter to your past self.",
+    "Learn to juggle with scarves.",
+    "Visit a historical site in your city.",
+    "Take a pottery or ceramics class."
 ]
 
 
